non-msrv-tests/tests/ui/zeroize/trait.rs
#[derive(derive_where::DeriveWhere)]
#[derive_where(T)]
struct Test<T>(T);

fn main() {}
